--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -11,6 +11,7 @@
     <TextView
         android:id="@+id/title"
         android:lines="1"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello"
