--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,35 @@
     <dimen name="tab_padding_bottom">16dp</dimen>
     <dimen name="tab_label">10sp</dimen>
     <dimen name="custom_tab_layout_height">72dp</dimen>
+
+
+    <dimen name="small_padding">5dp</dimen>
+    <dimen name="smiley_icon_padding">8dp</dimen>
+    <dimen name="mobile_image_padding">4.1dp</dimen>
+    <dimen name="check_image_size">12dp</dimen>
+    <dimen name="mail_image_padding">4.1dp</dimen>
+
+
+    <dimen name="blank_view_height">30dp</dimen>
+
+    <dimen name="adverisement_item_layout_head_margin">8dp</dimen>
+
+    <dimen name="small_margin">5dp</dimen>
+    <dimen name="medium_margin">10dp</dimen>
+    <dimen name="large_margin">15dp</dimen>
+    <dimen name="negative_large_margin">-15dp</dimen>
+
+    <dimen name="check_image_top_margin">7dp</dimen>
+    <dimen name="check_image_right_margin">3dp</dimen>
+    <dimen name="check_image_right_small_margin">1.2dp</dimen>
+
+
+    <dimen name="user_profile_image_height">280dp</dimen>
+    <dimen name="medium_height">50dp</dimen>
+
+    <dimen name="small_textsize">12sp</dimen>
+    <dimen name="medium_textsize">18sp</dimen>
+
+    <dimen name="small_image_size">25dp</dimen>
+
 </resources>
