--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="biyeta.nas.biyeta.HomeScreen"
+    tools:context="biyeta.nas.biyeta.activity.HomeScreen"
     tools:showIn="@layout/activity_home_screen">
 
 </RelativeLayout>
