--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E0E0E0"
@@ -222,6 +223,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/medium_margin">
 
+        <!--
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/finalResultBtn"
+                    android:layout_marginLeft="@dimen/large_margin"
+                    android:layout_marginRight="@dimen/large_margin"
+                    card_view:cardCornerRadius="4dp">
+        -->
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/user_details_recycler_view"
             android:layout_width="match_parent"
@@ -230,6 +243,10 @@
             android:layout_marginLeft="@dimen/large_margin"
             android:layout_marginRight="@dimen/large_margin"
             android:scrollbars="vertical" />
+        <!--
+
+                </android.support.v7.widget.CardView>
+        -->
 
         <Button
             android:id="@+id/finalResultBtn"
