--- a/app/src/main/res/layout/profile_details_child_item.xml
+++ b/app/src/main/res/layout/profile_details_child_item.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
+    android:background="@drawable/card_background"
     android:orientation="vertical">
 
+    <!-- <android.support.v7.widget.CardView
+         android:id="@+id/card_view"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         card_view:cardCornerRadius="4dp">-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/medium_margin"
-        android:background="#FFFFFF"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/smiley_icon_padding"
@@ -23,28 +28,31 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ব্যবসায়ী"
-            android:textSize="@dimen/medium_textsize" />
+            android:text=""
+            android:textSize="@dimen/medium_textsize"
+            android:textStyle="bold" />
 
-        <TextView
+        <EditText
             android:id="@+id/titleResultTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/negative_large_margin"
             android:layout_weight="1"
-            android:text="পেশাই জড়িত নাই"
-            android:textSize="@dimen/medium_textsize" />
+            android:background="@android:color/transparent"
+            android:textColor="#757575"
+            android:textSize="@dimen/medium_textsize"
+            android:textStyle="bold" />
     </LinearLayout>
 
 
     <LinearLayout
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginLeft="@dimen/medium_margin"
-        android:layout_marginRight="@dimen/medium_margin"
-        android:background="#EEEEEE">
+        android:layout_height="6dp"
+        android:background="#E0E0E0"
+        android:orientation="vertical"
+        android:visibility="gone">
 
     </LinearLayout>
-
-
+    <!-- </android.support.v7.widget.CardView>-->
 </LinearLayout>
