--- a/app/src/main/res/layout/list_profile_details_parent_item.xml
+++ b/app/src/main/res/layout/list_profile_details_parent_item.xml
@@ -25,8 +25,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
             android:layout_marginLeft="@dimen/medium_margin"
-            android:textSize="@dimen/medium_textsize"
             android:text=""
+            android:textSize="@dimen/medium_textsize"
             android:textStyle="bold" />
 
         <ImageView
@@ -34,16 +34,18 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_centerHorizontal="true"
-            android:layout_toLeftOf="@+id/parentListItemExpandbtn"
-            android:src="@android:drawable/arrow_down_float" />
+            android:layout_toLeftOf="@+id/parentListItemExpandImage"
+            android:padding="@dimen/small_padding"
+            android:src="@drawable/editicon" />
 
         <ImageView
-            android:id="@+id/parentListItemExpandbtn"
+            android:id="@+id/parentListItemExpandImage"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerHorizontal="true"
-            android:src="@android:drawable/arrow_up_float" />
+            android:padding="@dimen/small_padding"
+            android:src="@drawable/down_arrow" />
 
 
         <LinearLayout
