--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -1,6 +1,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
+    android:layout_gravity="right"
     android:layout_height="match_parent">
     <!-- The main content view -->
     <!--
@@ -24,7 +25,7 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:visibility="gone" />
+          />
 
 
 </android.support.v4.widget.DrawerLayout>
