--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E0E0E0">
 
 
-    <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
+        android:id="@+id/r1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/finalResultBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="#B71C1C"
+            android:text="পুরো বায়োডাটা দেখার অনুরোধ করুন"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordnatelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/r1"
         android:fitsSystemWindows="true"
-        tools:context="biyeta.nas.biyeta.Main2Activity">
+        tools:context="biyeta.nas.biyeta.Main2Activity"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -30,10 +50,12 @@
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     app:layout_collapseMode="parallax">
+
 
                     <ImageView
                         android:id="@+id/userProfileImage"
@@ -48,23 +70,7 @@
                         android:layout_gravity="start"
                         android:layout_marginTop="@dimen/medium_margin">
 
-                        <TextView
-                            android:id="@+id/userName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="user  Name"
-                            android:textColor="#FFFFFF"
-                            android:textSize="@dimen/medium_textsize"
-                            android:textStyle="bold" />
 
-                        <ImageView
-                            android:id="@+id/backPreviousActivityImage"
-                            android:layout_width="@dimen/small_image_size"
-                            android:layout_height="@dimen/small_image_size"
-                            android:layout_alignParentLeft="true"
-                            android:paddingLeft="@dimen/small_padding"
-                            android:src="@drawable/back_arrow" />
 
                         <ImageView
                             android:id="@+id/likeImage"
@@ -121,6 +127,18 @@
                     android:layout_marginRight="@dimen/large_margin"
                     android:layout_marginTop="@dimen/medium_margin"
                     android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ProgressBar
+                            android:id="@+id/pbProcessing"
+                            style="?android:attr/progressBarStyleHorizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/tvProcessing"
+                            android:indeterminateOnly="true"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -128,7 +146,6 @@
                         android:layout_marginTop="@dimen/small_margin"
                         android:orientation="horizontal"
                         android:weightSum="2">
-
                         <LinearLayout
                             android:id="@+id/layoutSendSmiley"
                             android:layout_width="0dp"
@@ -255,6 +272,7 @@
                         </LinearLayout>
 
                     </LinearLayout>
+                        </LinearLayout>
 
 
                     <RelativeLayout
@@ -264,11 +282,14 @@
                         android:background="#FFFFFF">
 
                         <TextView
+                            android:textColor="@color/colorPrimary"
+                            android:padding="10dp"
+
                             android:id="@+id/userProfileDescriptionText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text=""
-                            android:textSize="@dimen/medium_textsize" />
+                            android:textSize="@dimen/small_textsize" />
 
                     </RelativeLayout>
 
@@ -291,21 +312,4 @@
 
 
     </android.support.design.widget.CoordinatorLayout>
-
-    <RelativeLayout
-        android:id="@+id/r1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
-        <Button
-            android:id="@+id/finalResultBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:background="#B71C1C"
-            android:text="পুরো বায়োডাটা দেখার অনুরোধ করুন"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold" />
-    </RelativeLayout>
 </RelativeLayout>
