--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,38 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E0E0E0">
 
 
-    <RelativeLayout
-        android:id="@+id/r1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
-        <Button
-            android:id="@+id/finalResultBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:background="#B71C1C"
-            android:text="পুরো বায়োডাটা দেখার অনুরোধ করুন"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold" />
-    </RelativeLayout>
-
-    <android.support.design.widget.CoordinatorLayout
+    <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/coordnatelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/r1"
         android:fitsSystemWindows="true"
-        tools:context="biyeta.nas.biyeta.Main2Activity"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        tools:context="biyeta.nas.biyeta.Main2Activity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -50,12 +30,10 @@
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     app:layout_collapseMode="parallax">
-
 
                     <ImageView
                         android:id="@+id/userProfileImage"
@@ -69,6 +47,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
                         android:layout_marginTop="@dimen/medium_margin">
+
+
 
 
 
@@ -127,18 +107,6 @@
                     android:layout_marginRight="@dimen/large_margin"
                     android:layout_marginTop="@dimen/medium_margin"
                     android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ProgressBar
-                            android:id="@+id/pbProcessing"
-                            style="?android:attr/progressBarStyleHorizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/tvProcessing"
-                            android:indeterminateOnly="true"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -146,6 +114,7 @@
                         android:layout_marginTop="@dimen/small_margin"
                         android:orientation="horizontal"
                         android:weightSum="2">
+
                         <LinearLayout
                             android:id="@+id/layoutSendSmiley"
                             android:layout_width="0dp"
@@ -272,7 +241,6 @@
                         </LinearLayout>
 
                     </LinearLayout>
-                        </LinearLayout>
 
 
                     <RelativeLayout
@@ -282,13 +250,14 @@
                         android:background="#FFFFFF">
 
                         <TextView
-                            android:textColor="@color/colorPrimary"
-                            android:padding="10dp"
+                            android:textColor="@color/colorPrimaryDark"
 
+                            android:padding="10dp"
                             android:id="@+id/userProfileDescriptionText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text=""
+                            android:textStyle="bold|italic"
                             android:textSize="@dimen/small_textsize" />
 
                     </RelativeLayout>
@@ -312,4 +281,21 @@
 
 
     </android.support.design.widget.CoordinatorLayout>
+
+    <RelativeLayout
+        android:id="@+id/r1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/finalResultBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="#B71C1C"
+            android:text="পুরো বায়োডাটা দেখার অনুরোধ করুন"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
+    </RelativeLayout>
 </RelativeLayout>
