--- a/app/src/main/res/layout/filter_search.xml
+++ b/app/src/main/res/layout/filter_search.xml
@@ -330,6 +330,40 @@
                 ></com.nascenia.biyeta.view.MyGridView>
             </LinearLayout>
         </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/location_"
+                    android:layout_width="match_parent"
+                    android:padding="20dp"
+                    android:paddingLeft="10dp"
+
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp_1x"
+                    android:text="@string/location_text"
+                    android:textStyle="bold" />
+
+                <com.nascenia.biyeta.view.MyGridView
+                    android:visibility="gone"
+                    android:id="@+id/location_grid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:numColumns="1"
+
+                    ></com.nascenia.biyeta.view.MyGridView>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
         <Button
