--- a/app/src/main/res/layout/profile_details_child_item.xml
+++ b/app/src/main/res/layout/profile_details_child_item.xml
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:text="hello world"
             android:textSize="@dimen/small_textsize"
-            android:textStyle="normal" />
+            android:textStyle="normal"  />
 
         <EditText
             android:id="@+id/titleResultTextView"
@@ -56,5 +56,5 @@
         android:visibility="gone">
 
     </LinearLayout>
-    <!-- </android.support.v7.widget.CardView>-->
+    <!-- </android.support.v7.widget.CardView> E0E0E0-->
 </LinearLayout>
