--- a/app/src/main/res/layout/list_profile_details_parent_item.xml
+++ b/app/src/main/res/layout/list_profile_details_parent_item.xml
@@ -1,8 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:layout_marginTop="10dp"
+   >
+<RelativeLayout
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/card_background">
+    android:layout_height="60dp"
+   >
 
 
     <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -10,43 +16,59 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp">-->
 
+    <LinearLayout
+        android:id="@+id/indicator2"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@+id/relativeParent"
+        android:background="@color/without_expand_color"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/relativeParent"
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="match_parent"
-        android:background="@drawable/card_background">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
 
         <TextView
             android:id="@+id/parentListItemTitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_above="@+id/indicator1"
+
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/medium_margin"
+            android:padding="@dimen/medium_padding"
             android:gravity="center"
-            android:text=""
+            android:text="xxxxxxxxxxx"
             android:textSize="@dimen/medium_textsize"
             android:textStyle="bold" />
 
         <ImageView
+            android:visibility="invisible"
             android:id="@+id/editItemBtn"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_toLeftOf="@+id/parentListItemExpandImage"
-            android:padding="@dimen/small_padding"
+            android:padding="@dimen/medium_padding"
             android:src="@drawable/editicon" />
 
         <ImageView
             android:id="@+id/parentListItemExpandImage"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/medium_margin"
             android:layout_centerHorizontal="true"
-            android:padding="@dimen/small_padding"
+            android:padding="@dimen/medium_padding"
             android:src="@drawable/down_arrow" />
 
 
@@ -63,17 +85,7 @@
 
 
     </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/indicator2"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_below="@+id/relativeParent"
-        android:background="@color/without_expand_color"
-        android:orientation="horizontal"
-        android:visibility="visible">
-
-    </LinearLayout>
     <!--</android.support.v7.widget.CardView>-->
 
 </RelativeLayout>
+</android.support.v7.widget.CardView>
