--- a/app/src/main/res/layout/list_profile_details_parent_item.xml
+++ b/app/src/main/res/layout/list_profile_details_parent_item.xml
@@ -2,7 +2,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="0.5dp"
+
+
    >
 <RelativeLayout
     android:id="@+id/card_view"
@@ -48,7 +50,7 @@
             android:padding="@dimen/medium_padding"
             android:gravity="center"
             android:text="xxxxxxxxxxx"
-            android:textSize="@dimen/medium_textsize"
+            android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
         <ImageView
@@ -75,11 +77,11 @@
         <LinearLayout
             android:id="@+id/indicator1"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="4dp"
             android:layout_below="@+id/editItemBtn"
             android:layout_marginLeft="@dimen/medium_margin"
             android:layout_marginRight="@dimen/medium_margin"
-            android:background="@color/without_expand_color"
+            android:background="#000000"
             android:orientation="horizontal"
             android:visibility="visible"></LinearLayout>
 
