--- a/app/src/main/res/layout/activity_main_actionbar_item.xml
+++ b/app/src/main/res/layout/activity_main_actionbar_item.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="@dimen/medium_margin"
+        android:paddingLeft="@dimen/medium_margin"
         android:src="@drawable/search"
         android:visibility="visible" />
 
@@ -32,8 +32,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/medium_margin"
-        android:layout_marginRight="@dimen/medium_margin"
+
         android:layout_toLeftOf="@+id/profile"
         android:layout_toRightOf="@+id/search"
         android:gravity="center"
@@ -44,6 +43,7 @@
         <ImageView
             android:id="@+id/match"
             android:layout_width="0dp"
+            android:paddingLeft="@dimen/medium_margin"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@drawable/match" />
@@ -60,6 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingRight="@dimen/medium_margin"
             android:src="@drawable/inbox"
             android:visibility="visible" />
 
@@ -79,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:layout_marginRight="@dimen/medium_margin"
+        android:paddingRight="@dimen/medium_margin"
         android:src="@drawable/profile"
         android:visibility="visible" />
 </RelativeLayout>
